# ChangeLog for media-libs/mutagen
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/mutagen/ChangeLog,v 1.94 2013/02/18 15:41:24 floppym Exp $

  18 Feb 2013; Mike Gilbert <floppym@gentoo.org> mutagen-1.21.ebuild:
  Fix the test phase properly.

  18 Feb 2013; Samuli Suominen <ssuominen@gentoo.org> mutagen-1.21.ebuild:
  Restore eyeD3 test dependency and run ./setup.py test again by overriding
  distutils-r1 src_test()

*mutagen-1.21 (18 Feb 2013)

  18 Feb 2013; Samuli Suominen <ssuominen@gentoo.org> +mutagen-1.21.ebuild:
  Version bump wrt #458052 by Jamie Daws. Use distutils-r1 but it's like
  src_test() is ignored.

  24 Apr 2011; Raúl Porcel <armin76@gentoo.org> mutagen-1.20.ebuild:
  sparc stable wrt #357427

  11 Apr 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  mutagen-1.18.ebuild:
  Fix deprecation warning.

  21 Mar 2011; Thomas Kahle <tomka@gentoo.org> mutagen-1.20.ebuild:
  x86 stable per bug 357427

  13 Mar 2011; Tobias Klausmann <klausman@gentoo.org> mutagen-1.20.ebuild:
  Stable on alpha, bug #357427

  12 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> mutagen-1.20.ebuild:
  ppc/ppc64 stable wrt #357427

  08 Mar 2011; Jeroen Roovers <jer@gentoo.org> mutagen-1.20.ebuild:
  Stable for HPPA (bug #357427).

  06 Mar 2011; Markos Chandras <hwoarang@gentoo.org> mutagen-1.20.ebuild:
  Stable on amd64 wrt bug #357427

*mutagen-1.20 (21 Aug 2010)

  21 Aug 2010; Samuli Suominen <ssuominen@gentoo.org> +mutagen-1.20.ebuild:
  Version bump.

  13 Jun 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> mutagen-1.19.ebuild:
  x86 stable wrt bug #321893

  03 Jun 2010; Markos Chandras <hwoarang@gentoo.org> mutagen-1.19.ebuild:
  Stable on amd64 wrt bug #321893

*mutagen-1.19 (13 Mar 2010)

  13 Mar 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -mutagen-1.15.ebuild, -mutagen-1.16.ebuild, +mutagen-1.19.ebuild: