@@ -3,14 +3,20 @@ Hash: SHA256
 
 DIST mutagen-1.20.tar.gz 651649 SHA256 7e56c478de154fdcd00d257ebc77be8718188f1a0db916f51f129b7ca01de6e7 SHA512 7c167dce471dd4ca07f4baaf59a60a7a11d48168ad030138b081324180dbd14233fca1b97fb0911d9c6046bca6d2721d8fa6d7fd98f990ee14b51329cc444bcb WHIRLPOOL 69a1b0886372b7683fdd795d938d53cf64e711a9d1a30d4cedb87c91e9f9dc5b7f8df0ecc048b64fd330a590cb5e271a6174eb5224ba890cdd9159ef5b5d25d6
 DIST mutagen-1.21.tar.gz 795419 SHA256 4dd30af3a291c0a152838f2bbf1d592bf6ede752b11a159cbf84e75815bcc2b5 SHA512 7f1da34969e6e3d399875abd029dce1b1f7446f9a353c20d789fe45bc0f52c6c294ea13754d37886315ba30ef3627b944c3d8665fa3b575cc455d8aa157cf982 WHIRLPOOL 4c2646664e981220748a7f7ac31d24a9f32b8c6d65170b448e6d83d3b43ad0b13e43e33521104ab8e760cbbd0a9fb041de6d23e4ca05185fb7427f82c87e7e8e
+DIST mutagen-1.22.tar.gz 813763 SHA256 ddf2907bcaf4827b044a3d70b2fb3c1b58954497d86133f16715fc6c407d494e SHA512 875d61fdb89de6e620dc397a23a83da2d8bdbf111cceb469a6089225c9d7aa91fe03c98258c522ae781e6bbc3d7b72aa66de571c7d99d72419a72697c9b389cc WHIRLPOOL ea3b771c11143194ac395ffe896d2be5410896e614293c14e2a8a9515c5316a8872da5d600a7fa72a710c2263f845dda6e7cd85a7478eeeaa25ec8179ba23c5f
 EBUILD mutagen-1.20.ebuild 874 SHA256 64acd75bc380d8f0638177144a9b8f83d114449a8fdd7c0a9ee87d89a165fa48 SHA512 1f99e57e8e1ea1968c9f83a43ca3834d0b8a98dd8f99ff1e3d7cbb6f0f6a3e46a322c8f25713e2a601dd1b1cf44058925bfa337827958e719d51a7a9769cd249 WHIRLPOOL 5de5b42fd97d8732ac2812f9f530183ec486f2338cbbb60a90d7a0bbc3c22dbe9a0018e389dd01be0236112d811ef3b5ac4af511d00136bb2ba37d2020f78846
 EBUILD mutagen-1.21.ebuild 971 SHA256 1d9b9ac2ae133cd7ca1a858d0ea66faec3686549633d15c79813ef36de57135b SHA512 25553e739af99bc96c8d63de734e274e31e0113c4b78c78df6bb6fbe6d20c845d0a012089fdefbadf6a0d83be81487de2819adb65209db5d9ffe0f15ebb11278 WHIRLPOOL eaf2ebd097029c964cb650f91931cc762c6fa361a94637f23e4f4de90f0c2114888b8ff9cfcfe6571ff782a75aab2d7db9d6f6aa4ebc7d3bfad74668a5c51e76
-MISC ChangeLog 11484 SHA256 09f56134b3cb7b1d513424ac0f65525b989319503facb200638d78c92e8aebec SHA512 c9220cf9fbbe9363fd7ceaa63cd98a8736de05d8c0b5b5798d9909dfd5653b4a99384cc40d791873a619c2fb8229bd18dddc9d6906317a704407b38aede6fd3c WHIRLPOOL 907a91295243622e1f628ca40f4699bb83c78d07253fe7b65bcfaa4185031410e39c24c872a0c0a84df38549976a624b2cb1f165ce921098d340518da706f785
+EBUILD mutagen-1.22.ebuild 1168 SHA256 47eb0998d9805740f0b81007e762e32985adeab74ee68d4c160a6c8343d0c944 SHA512 1d2402c25eda1a8107cd72ead3483a42f90b2774feb93867b354a10a9bd6f0fb83e2f8c7e54c1d0364b48518307322bc8a29a51936ef9d6229f067b94bc1e0a2 WHIRLPOOL 08137cd19ae1c1144aba63fb921373a4b6a9cab471db2f4157b1d4db2d6dda9b73531040c086d3e3085a27f48a14ca1b3ee2ce05b4e44d2b7382a2a42563e093
+MISC ChangeLog 11638 SHA256 e6d677eae39d10c9284692d5c27ea1c6c500f5405adb8db5484cb7aea13a1bab SHA512 70fc50e2f33d38b4c7db2b577a6733a4f143d4a77507e437b1bb4f7fb4c1d97b6af78bacc9a9e21b3ec5b6d9e87f25f12fbbd208255f6dda299338be91529580 WHIRLPOOL f3cc97a7741e8d7a2948c1dbb2e0b332c02211be20cd7b2fbedca97e9175dbd8e256b9f5bb19dc9a852aa64c6e58b9854f0e1f6f14bb71a3f9eecd37a71d21a8
 MISC metadata.xml 236 SHA256 83a8f4921f877d876d20905df47d1bfd3b5f8ff4737830cc6cae1de1fed4f20b SHA512 f630705dff92536d6935ba117712b4ac367e387e00c273f807f39c3167d826e11475987404780250a060c0cb37660b2f63db9adc9be8b38e029220c00acf05ff WHIRLPOOL d62a1fdd032b9d657d9664bdb6d1b3385c48b0da4213297c384ec4a57f4a2b22c0780e13ce0dfa8bd02c7c124b23261e2358c66e81281c2ca2c6119f4ee62ca8
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlEiS6UACgkQC77qH+pIQ6QW8AEAruY4UC3g2yK6I7eaMFf/wxC4
-b/yvxcS6YY3dGhCw2MkA/Aqv6tc1doCwxiVPO6ds6RQ6vbEdDnb/FQU1Wn1wd6g6
-=NHsK
+iQEcBAEBCAAGBQJSo/o7AAoJEEqz6FtPBkyjhUsH/2mye/8CmT+7dwbcr50EEa8X
+p7LDvhTkV35/ILoFGrDz4COIQLcb3VguW/yY+jikzd7d2NG8iI/eiPAC45nFdKNC
+6C0K3BdnwrAn38snAHRCgB7Lb8tK20KCbHTmwDHiQ5X1L7RCef4tS/iwUCBB0wtS
+0E+BEULB9+0KKd1uRMyAcE1qNFb0E7c5nNkyd9jIaZbwMwjHCdGaQdrURooA+lyl
+/JyQb1kkQFuwWDx0iC5bAO0fJNcv5PsXT1ElhDKh8o0QRvPKN8OJ0Sh6ukpYvWdL
+CqVx1xZtXWptnULJ9wF2m0HJEimXXYcy4GElYEEoxLhY0celt0ArbP0E+qvL3Ts=
+=FHy7
 -----END PGP SIGNATURE-----
