@@ -1,0 +1,42 @@
+# Copyright 1999-2013 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/mutagen/mutagen-1.22.ebuild,v 1.1 2013/12/08 04:48:58 radhermit Exp $
+
+EAPI=5
+PYTHON_COMPAT=( python2_7 )
+
+inherit distutils-r1
+
+DESCRIPTION="Mutagen is an audio metadata tag reader and writer implemented in pure Python."
+HOMEPAGE="http://code.google.com/p/mutagen http://pypi.python.org/pypi/mutagen"
+SRC_URI="https://bitbucket.org/lazka/${PN}/downloads/${P}.tar.gz"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-interix ~amd64-linux ~x86-linux"
+IUSE="doc test"
+
+DEPEND="
+	doc? ( dev-python/sphinx[${PYTHON_USEDEP}] )
+	test? ( dev-python/eyeD3 )
+"
+
+python_compile_all() {
+	use doc && emake -C docs
+}
+
+src_test() {
+	# tests/test_flac.py uses temp files with a constant path.
+	# If we had multiple python implementations, we would hit a race.
+	DISTUTILS_NO_PARALLEL_BUILD=1 distutils-r1_src_test
+}
+
+python_test() {
+	esetup.py test
+}
+
+python_install_all() {
+	local DOCS=( NEWS README TODO )
+	use doc && local HTML_DOCS=( docs/_build/. )
+	distutils-r1_python_install_all
+}
